1.2.4
- Fixed some Discord commands using color codes.
- Roles were previously managed by removing all roles from every member, then re-applying them. Roles are now only removed when and if they need to be, which should significantly improve the speed and reliability of role management. The role application algorithm also only operates per-tribe instead of globally.
- Applied the same logic above to calculating board movement.
- Applied the same logic above to assigning LuckPerms permissions.
- Fixed an issue where the `/royalty update` Discord command would sometimes not respond.
- Fixed an issue where the `/royalty update` MC/DC command would sometimes fail during execution due to a timeout caused by faulty threading.
- Fixed an issue where Discord updates would occur more often than was required.
- Fixed an issue where LuckPerms permissions were not being removed correctly.
- Fixed an issue where the royalty board was being saved to disk more often than was required.
- Fixed an issue where missed challenge requests would not delete the challenge from `challenges.yml`.
- Fixed an issue where missed challenge requests would not remove the `challening` attribute from `board.yml`.
- If a position in `board.yml` has an invalid UUID string, it will be considered empty instead of throwing an `IllegalArgumentException` and crashing Eye of Onyx.
- If a position in `board.yml` has an invalid LocalDateTime string, it will be considered empty instead of throwing an `DateTimeParseException` and crashing Eye of Onyx.
- Fixed an issue where board recalculation would occur after a character name change.
- Role removal and application now occurs asynchronously.
- Eye of Onyx will deliver warnings instead of throwing errors when roles, members, users, messages, or guilds cannot be found.
- Fixed an issue where players removed from the royalty board would get the noble LP permission instead of no permissions.
- Fixed an issue where attempting to add someone to the royalty board whi